# hive

./: Cargo.toml  Makefile
daemon/: Cargo.toml
daemon/src/: main.rs  util.rs
daemon/src/render/: app.rs  mod.rs  window.rs
plugins/bee-hyprland/: Cargo.toml
plugins/hive-hyprland/: Cargo.toml
src/: main.rs
