[package]
name = "hive-daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
daemonize = "0.4.1"
calloop = { version = "0.10.5", features = ["executor"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }